@@ -151,7 +151,7 @@ DPP_PROG_LINKER
 # -----------------------------------------------------------------------------
 # Checks for libraries.
 # -----------------------------------------------------------------------------
-VPR_PATH([0.31], , [AC_MSG_ERROR([*** VPR required for Gadgeteer ***])])
+VPR_PATH([0.35.2], , [AC_MSG_ERROR([*** VPR required for Gadgeteer ***])])
 VPR_SUBSYSTEM=`$VPR_CONFIG --subsystem`
 JCCL_PATH_CXX([0.17], ,
               [AC_MSG_ERROR([*** JCCL C++ API required for Gadgeteer ***])])
